--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "jasmine-core": "^2.99.1",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "mocha": "^5.0.0",
+    "phantomjs": "^2.1.7",
     "protractor": "^5.3.0",
     "selenium-standalone": "^6.12.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
