--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "mocha": "^5.0.0",
-    "phantomjs": "^2.1.7",
+    "phantomjs": "^2.1.7+deprecated",
     "protractor": "^5.3.0",
     "selenium-standalone": "^6.12.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
